include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

#The name of the help document to build.
#  This is the filename without the .xml extension.
DOC_MODULE = gparted

#List any files included in the help document using system entities
#  Example:  <!ENTITY SYSTEM "chapter1.xml">
DOC_ENTITIES =

#List any files that are included in the Xinclude specification
DOC_INCLUDES =

#List of all the figures that are referenced in the help document
DOC_FIGURES = figures/gparted_window.png

#List of all the language codes for the languages in which the
#  document is translated
DOC_LINGUAS = cs de el es fr gd it pt_BR ro ru sl sr sr@latin sv te th
