@YELP_HELP_RULES@

# Name of the directory into which help files are installed:
# ${datadir}/help/${LANG}/${HELP_ID}/
HELP_ID = gparted

# List of help files to install.
# NOTE: Top-level DocBook file MUST be named index.docbook.
# https://wiki.gnome.org/Initiatives/GnomeGoals/NewDocumentationInfrastructure
HELP_FILES = index.docbook

#List of all the figures that are referenced in the help document
HELP_MEDIA = figures/gparted_window.png

#List of all the language codes for the languages in which the
#  document is translated
HELP_LINGUAS = cs de el es fr gd id it pt_BR ro ru sl sr sr@latin sv te th uk
