gparted_includedir = $(pkgincludedir)

EXTRA_DIST = \
	Device.h 			\
	Dialog_Base_Partition.h		\
	Dialog_Disklabel.h 		\
	Dialog_Rescue_Data.h		\
	Dialog_Partition_Copy.h		\
    Dialog_Partition_Info.h		\
    Dialog_Partition_Label.h	\
	Dialog_Partition_New.h    	\
	Dialog_Partition_Resize_Move.h 	\
	Dialog_Progress.h  		\
	DialogFeatures.h 		\
	DialogManageFlags.h  		\
	DrawingAreaVisualDisk.h 	\
	DMRaid.h				\
	FileSystem.h  			\
	Frame_Resizer_Base.h		\
	Frame_Resizer_Extended.h	\
	FS_Info.h				\
	GParted_Core.h    		\
	HBoxOperations.h    		\
	LVM2_PV_Info.h			\
	Operation.h 			\
	OperationCopy.h			\
	OperationCheck.h		\
	OperationCreate.h		\
	OperationDelete.h		\
	OperationDetail.h		\
	OperationFormat.h		\
	OperationResizeMove.h		\
	OperationChangeUUID.h		\
	OperationLabelPartition.h	\
	Partition.h  			\
	Proc_Partitions_Info.h	\
	TreeView_Detail.h 		\
	Utils.h 			\
	Win_GParted.h 			\
	btrfs.h				\
	exfat.h				\
	ext2.h				\
	ext3.h  			\
	ext4.h  			\
	fat16.h    			\
	fat32.h  			\
	hfs.h  				\
	hfsplus.h 			\
	i18n.h				\
	jfs.h 				\
	linux_swap.h 			\
	lvm2_pv.h			\
	nilfs2.h			\
	ntfs.h  			\
	reiser4.h   			\
	reiserfs.h  			\
	ufs.h  				\
	xfs.h				\
	PipeCapture.h
