gparted_includedir = $(pkgincludedir)

noinst_HEADERS = \
	BCache_Info.h			\
	BlockSpecial.h			\
	CopyBlocks.h			\
	DMRaid.h			\
	Device.h			\
	DialogFeatures.h		\
	DialogManageFlags.h		\
	DialogPasswordEntry.h		\
	Dialog_Base_Partition.h		\
	Dialog_Disklabel.h		\
	Dialog_FileSystem_Label.h	\
	Dialog_Partition_Copy.h		\
	Dialog_Partition_Info.h		\
	Dialog_Partition_Name.h		\
	Dialog_Partition_New.h		\
	Dialog_Partition_Resize_Move.h	\
	Dialog_Progress.h		\
	DrawingAreaVisualDisk.h		\
	FS_Info.h			\
	FileSystem.h			\
	Frame_Resizer_Base.h		\
	Frame_Resizer_Extended.h	\
	GParted_Core.h			\
	HBoxOperations.h		\
	LVM2_PV_Info.h			\
	LUKS_Info.h			\
	MenuHelpers.h			\
	Mount_Info.h			\
	Operation.h			\
	OperationChangeUUID.h		\
	OperationCheck.h		\
	OperationCopy.h			\
	OperationCreate.h		\
	OperationDelete.h		\
	OperationDetail.h		\
	OperationFormat.h		\
	OperationLabelFileSystem.h	\
	OperationNamePartition.h	\
	OperationResizeMove.h		\
	OptionComboBox.h		\
	Partition.h			\
	PartitionLUKS.h			\
	PartitionVector.h		\
	PasswordRAMStore.h		\
	PipeCapture.h			\
	Proc_Partitions_Info.h		\
	ProgressBar.h			\
	SupportedFileSystems.h		\
	SWRaid_Info.h			\
	TreeView_Detail.h		\
	Utils.h				\
	Win_GParted.h			\
	bcachefs.h			\
	btrfs.h				\
	exfat.h				\
	ext2.h				\
	f2fs.h				\
	fat16.h				\
	hfs.h				\
	hfsplus.h			\
	i18n.h				\
	jfs.h				\
	linux_swap.h			\
	lvm2_pv.h			\
	luks.h				\
	minix.h				\
	nilfs2.h			\
	ntfs.h				\
	reiser4.h			\
	reiserfs.h			\
	udf.h				\
	xfs.h
