icondir = join_paths(get_option('datadir'), 'icons/hicolor')

install_data('hicolor_apps_16x16_gparted.png', install_dir: join_paths(icondir, '16x16', 'apps'), rename: 'gparted.png')
install_data('hicolor_apps_22x22_gparted.png', install_dir: join_paths(icondir, '22x22', 'apps'), rename: 'gparted.png')
install_data('hicolor_apps_24x24_gparted.png', install_dir: join_paths(icondir, '24x24', 'apps'), rename: 'gparted.png')
install_data('hicolor_apps_32x32_gparted.png', install_dir: join_paths(icondir, '32x32', 'apps'), rename: 'gparted.png')
install_data('hicolor_apps_48x48_gparted.png', install_dir: join_paths(icondir, '48x48', 'apps'), rename: 'gparted.png')
install_data('hicolor_apps_scalable_gparted.svg', install_dir: join_paths(icondir, 'scalable', 'apps'), rename: 'gparted.svg')
